--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script src="./hello.js"></script>
 <body>
-    helloworld
+    <div id="root">{{title}}</div>
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+<script>
+    const test = new Vue({
+        el:'#root',
+        data(){
+            return {
+                title:'测试'
+            }
+        }
+    })
+
+
+</script>
+
 </body>
 </html>
